# migrate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  conductor.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
.claude/skills/: final-review.md
.claude/skills/final-review/: SKILL.md
.github/workflows/: ci.yml
scripts/: build.mjs
src/: baseline.rs  cli.ts  engine.test.ts  engine.ts  index.ts  lib.rs  loader.rs  loader.test.ts  loader.ts  main.rs  state.rs  state.test.ts  state.ts  templates.rs  types.ts  version.rs
src/commands/: baseline.rs  create.rs  mod.rs  status.rs  up.rs
templates/: bash.sh  node.js  python.py  ruby.rb  typescript.ts
test-fixtures/: package.json
test-fixtures/migrations/: 001-add-typescript.ts  002-add-eslint.ts
tests/: fixture_operations.rs  integration.rs
tests/fixtures/sample-project/: README.md  config.json
tests/fixtures/sample-project/src/: main.ts  utils.ts
