[package]
name = "migrate"
version = "0.3.0"
edition = "2021"
description = "Generic file migration tool for applying ordered transformations to a project directory"
license = "MIT"
repository = "https://github.com/glideapps/migrate"
readme = "README.md"
keywords = ["migration", "cli", "automation", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/migrate-{ target }{ archive-suffix }"
pkg-fmt = "bin"
